Feat: Built the inventory system
